fix option item spacing

--- a/packages/ng/option/item/tree-option-item.component.scss
+++ b/packages/ng/option/item/tree-option-item.component.scss
@@ -43,7 +43,7 @@
 .optionItem-icons {
 	display: none;
 	position: absolute;
-	top: var(--pr-t-spacings-100);
+	top: var(--pr-t-spacings-50);
 	right: var(--pr-t-spacings-100);
 	opacity: 0;
 	transition: all var(--commons-animations-durations-fast) ease;
